# recipe-rust-service

./: Cargo.toml  Dockerfile  m
src/: main.rs  recipeHandler.rs  recipe_handler.rs
